<resources>
    <string name="app_name">GroupProject</string>
    <string name="women">Women</string>
    <string name="man">Man</string>
    <string name="baby">Baby</string>
    <string name="plane">Plane</string>
    <string name="foods_drink">Foods,Drink</string>
    <string name="tech">Tech</string>
    <string name="instagram">Instagram</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">forget password?</string>
    <string name="log_in">LOG IN</string>
    <string name="welcome">Welcome</string>
    <string name="success_login">You have been successfully logged in</string>
    <string name="password_not_valid">Password is not valid</string>
    <string name="username_not_valid">Username is not valid</string>
</resources>