<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context=".MainFragment">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/women_box"
        style="@style/box_text_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/women_bg"
        android:drawableTop="@drawable/ic_women"
        android:text="@string/women"
        app:layout_constraintBottom_toTopOf="@id/baby_box"
        app:layout_constraintEnd_toStartOf="@id/man_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/man_box"
        style="@style/box_text_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/man_bg"
        android:drawableTop="@drawable/ic_person"
        android:text="@string/man"
        app:layout_constraintBottom_toTopOf="@id/plane_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/women_box"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/baby_box"
        style="@style/box_text_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/baby_bg"
        android:drawableTop="@drawable/ic_baby"
        android:text="@string/baby"
        app:layout_constraintBottom_toTopOf="@id/tech_boc"
        app:layout_constraintEnd_toStartOf="@id/plane_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/women_box" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/plane_box"
        style="@style/box_text_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/plane_bg"
        android:drawableTop="@drawable/ic_plane"
        android:text="@string/plane"
        app:layout_constraintBottom_toTopOf="@id/food_drink_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/baby_box"
        app:layout_constraintTop_toBottomOf="@id/man_box" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tech_boc"
        style="@style/box_text_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/phone_bg"
        android:drawableTop="@drawable/ic_phone"
        android:text="@string/tech"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/food_drink_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/baby_box" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/food_drink_box"
        style="@style/box_text_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/food_drink_bg"
        android:drawableTop="@drawable/ic_coffee"
        android:text="@string/foods_drink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tech_boc"
        app:layout_constraintTop_toBottomOf="@id/plane_box" />


</androidx.constraintlayout.widget.ConstraintLayout>